<resources>
    <string name="app_name">STREE</string>
    <string name="home">HOME</string>
    <string name="jobs">JOBS</string>
    <string name="interview">INTERVIEW</string>
    <string name="policy">POLICIES</string>
    <string name="legal_support">LEGAL SUPPORT</string>
    <string name="education">EDUCATION</string>
    <string name="health">HEALTH</string>
    <string name="more_links">MORE LINKS</string>
    <string name="complaint_box">COMPLAINT BOX</string>
    <string name="about_us">ABOUT US</string>
    <string name="help">HELP</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="unique_id">Unique ID</string>
    <string name="new_to_stree_register">New to STREE? Register.</string>
    <string name="register_page_title">Registration</string>
    <string name="register_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login">Already registered? Login.</string>
    <string name="phone">Phone Number</string>
    <string name="admin_login">Admin Login</string>
    <string name="user_login">User Login</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="complaint_related_to">Complaint Related To :</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_complaint">Enter Complaint </string>
    <string name="complaint">Send Complaint</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="upload" translatable="false">अपलोड</string>
    <string-array name="complaint_type_spinner_items">
        <item>HEALTH</item>
        <item>EDUCATION</item>
        <item>JOBS</item>
        <item>INTERVIEW TIPS</item>
        <item>POLICY</item>
        <item>LEGAL SUPPORT</item>
    </string-array>
    <string name="login_as">Login As</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="h_tab1">Women health tips</string>
    <string name="h_tab2">Child Health tips</string>
    <string name="h_tab3">Women Helth Issues</string>
    <string name="h_tab4">Child health Issues</string>
    <string name="h_tab5">Nutrition Guide</string>
    <string name="h_tab6">Hygiene  Methods</string>
    <string name="healthtip1">Eat a healthy diet.</string>
    <string name="healthtip1_desc">“You want to eat as close to a natural foods diet as you can,” That means a variety of fresh fruits and vegetables and fewer processed foods. Eat whole grains and high-fiber foods and choose leaner cuts of meat, fish, and poultry. Include low-fat dairy products in your diet as well — depending on your age, you need between 800 and 1,500 milligrams of calcium daily to help avoid osteoporosis.  Avoid foods and beverages that are high in calories, sugar, salt, and fat.</string>
    <string name="healthtip2">Exercise</string>
    <string name="healthtip2_desc">Heart disease is the leading cause of death among women, but plenty of
exercise can help keep your heart healthy. You want to exercise at least 30 minutes a day, five days a
week, if not every day. Aerobic exercises (walking, swimming, jogging, bicycling, dancing) are good for
women’s health in general and especially for your heart.</string>
    <string name="healthtip3">Avoid risky habits</string>
    <string name="healthtip3_desc">Stay away from cigarettes and people who smoke. Don’t use drugs. If
you drink alcohol, do so in moderation. Most women’s health studies show that women can safely
consume one drink a day. A drink is considered to be about 12 to 14 grams of alcohol, which is equal to
12 ounces of beer (4.5 percent alcohol); 5 ounces of wine (12.9 percent alcohol); or 1.5 ounces of spirits
(hard liquor such as gin or whiskey, 80-proof).</string>
    <string name="healthtip4">Manage stress</string>
    <string name="healthtip4_desc">No matter what stage of her life — daughter, mother, grandmother — a
woman often wears many hats and deals with a lot of pressure and stress. “Take a few minutes every
day just to relax and get your perspective back again,”. “It doesn’t take long, and mental health is
important to your physical well-being.” You also can manage stress with exercise, relaxation techniques,
or meditation.</string>
    <string name="healthtip5">Sun safely</string>
    <string name="healthtip5_desc">Excessive exposure to the sun’s harmful rays can cause skin cancer, which can
be deadly. To protect against skin cancer, wear sunscreen with a sun protection factor (SPF) of at least
15 if you are going to be outdoors for more than a few minutes. Even if you wear sunscreen faithfully,
you should check regularly for signs of skin cancer. Warning signs include any changes in the size, shape,
color, or feel of birthmarks, moles, or freckles, or new, enlarging, pigmented, or red skin</string>
    <string name="healthtip6">Check for breast cancer</string>
    <string name="healthtip6_desc">The American Cancer Society no longer recommends monthly
breast self-exams for women. However, it still suggests them as “an option” for women, starting in their
20s. You should be on the lookout for any changes in your breasts and report any concerns to your
doctor. All women 40 and older should get a yearly mammogram as a mammogram is the most effective
way of detecting cancer in its earliest stages, when it is most treatable.</string>
    <string name="child_healthtip1">Eating better</string>
    <string name="child_healthtip1_desc">
             Start the day with a healthy breakfast. It refuels the body and provides energy for the day.
 Let kids help plan and prepare 1 meal each week.
 Eat together as a family as often as possible.
 Take time eating, and chew slowly. It takes 20 minutes for the brain to tell the body that
you are full.
 Eat more vegetables and fresh fruits. Aim for a total of 2 cups of fruit and 2 1/2 cups of
vegetables each day.
 Eat more whole grains. Examples include oats, brown rice, rye, and whole-wheat pasta. Try
to eat at least 3 ounces of whole grains each day.
 Drink plenty of fluids. Choose water, low-fat or nonfat milk, and low-calorie beverages.
 Serve a variety of foods.
 Serve food in small portions.</string>
    <string name="child_healthtip2">Being more active</string>
    <string name="child_healthtip2_desc"> Move more. Try to get between 30 and 60 minutes of physical activity each day. Short
sessions of movement throughout the day add up.
 Include physical activity in your daily routine. Walk as a family before or after meals.
 Make playtime with your family fun. Be active by shooting hoops or playing tag.
 Be active in the home. 
 nclude activities, such as hiking or biking, when you go on vacation.
 Know your daily calorie needs. Balance calories you consume with calories you burn.
 Limit TV, computer, and video game time to less than 2 hours per day.
Encourage physical activity instead.</string>
    <string name="women_healthIssue1">Types of Issues</string>
    <string name="women_healthIssue1_desc">Women have unique health issues. And some of the health issues that affect both men and women
can affect women differently.
        Unique issues include <b>pregnancy, menopause</b>, and conditions of the female organs. Women can
        have a healthy pregnancy by getting early and regular <b>prenatal care</b>. They should also get
        recommended breast cancer, <b>cervical cancer</b>, and <b>bone density</b> screenings.</string>
    <string name="women_healthIssue2">Cancer:</string>
    <string name="women_healthIssue2_desc">Two of the most common cancers affecting women are breast and cervical cancers. Detecting
both these cancers early is key to keeping women alive and healthy. The latest global figures show that
around half a million women die from cervical cancer and half a million from breast cancer each year.</string>
    <string name="women_healthIssue3">Reproductive health:</string>
    <string name="women_healthIssue3_desc">Sexual and reproductive health problems are responsible for one third of health
issues for women between the ages of 15 and 44 years. Unsafe sex is a major risk factor – particularly
among women and girls in developing countries.</string>
    <string name="women_healthIssue4">Maternal health:</string>
    <string name="women_healthIssue4_desc">Many women are now benefitting from massive improvements in care during pregnancy
and childbirth introduced in the last century. But those benefits do not extend everywhere and in 2013,
almost 300 000 women died from complications in pregnancy and childbirth. Most of these deaths could
have been prevented, had access to family planning and to some quite basic services been in place.</string>
    <string name="women_healthIssue5">HIV:</string>
    <string name="women_healthIssue5_desc">Too many young women still struggle to protect themselves against sexual transmission of HIV and
to get the treatment they require. This also leaves them particularly vulnerable to tuberculosis - one of the
leading causes of death in low-income countries of women 20–59 years.</string>
    <string name="women_healthIssue6">Mental health:</string>
    <string name="women_healthIssue6_desc">Evidence suggests that women are more prone than men to experience anxiety,
depression, and somatic complaints – physical symptoms that cannot be explained medically. Depression
is the most common mental health problem for women and suicide a leading cause of death for women
under 60. Helping sensitise women to mental health issues, and giving them the confidence to seek
assistance, is vital.</string>
    <string name="women_healthIssue7">Noncommunicable diseases:</string>
    <string name="women_healthIssue7_desc">In 2012, some 4.7 million women died from noncommunicable diseases
before they reached the age of 70 —most of them in low- and middle-income countries. They died as a
result of road traffic accidents, harmful use of tobacco, abuse of alcohol, drugs and substances, and
obesity.</string>
    <string name="women_healthIssue8">Being young:</string>
    <string name="women_healthIssue8_desc">Adolescent girls face a number of sexual and reproductive health challenges: STIs, HIV,
and pregnancy. About 13 million adolescent girls (under 20) give birth every year. Complications from
those pregnancies and childbirth are a leading cause of death for those young mothers. Many suffer the
consequences of unsafe abortion.</string>
    <string name="child_healthIssues1">Types Of Health Issues</string>
    <string name="child_healthIssues1_desc">All children deserve high-quality medical care. As a parent, it is important to be aware of the most up-to-
        date treatment guidelines so you can be sure your child is getting the best care possible.</string>
    <string name="child_healthIssues2">Sour Throat</string>
    <string name="child_healthIssues2_desc">Sore throats are common in children and can be painful. However, a sore throat that is caused by a
virus does not need antibiotics. In those cases, no specific medicine is required, and your child should
get better in seven to ten days. In other cases, a sore throat could be caused by an infection called
streptococcal (strep throat).</string>
    <string name="child_healthIssues3">Ear Pain</string>
    <string name="enter_desc">Enter Description</string>
    <string name="enter_link">Enter Link</string>
</resources>