<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nav_header_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@drawable/_register_button_background"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/nav_header_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/_login_button_background"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="lakshyak67@gmail.com" />

        <Button
            android:id="@+id/nav_header_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/_login_button_background"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:alpha=".5"
        android:background="#222" />

</LinearLayout>