<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_and_phone_ediText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:inputType="phone"
            android:hint="@string/phone"
            android:layout_marginTop="16dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/unique_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:hint="@string/unique_id"
            android:layout_marginTop="8dp"
            android:maxLength="8"
            />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Login"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <TextView
        android:id="@+id/new_to_stree_register_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:text="@string/new_to_stree_register"/>

</LinearLayout>
</ScrollView>
