<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_border"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_as"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/popup_dismiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/login_as_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/yellowishOrange">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@android:color/white"
                android:src="@drawable/woman" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="24dp"
                android:text="@string/user"
                android:textColor="@android:color/black"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/login_as_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:background="@color/yellowishOrange">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@android:color/white"
                android:src="@drawable/admin" />

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="24dp"
                android:text="@string/admin"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>